# YARS

./: .gitignore  .gitmodules  AI_EXECUTABLE_REFACTORING_PLAN.md  CLAUDE.md  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  DEPENDENCIES_UPGRADE.md  LICENSE  Makefile  README.md  REFACTORING_CHECKLIST.md  REFACTORING_PLAN.md  Refactoring.md  analysis.fdb_latexmk  analysis.fls  analysis.tex  braitenberg-2025-08-22-21-59-55.csv  braitenberg-2025-08-23-00-37-19.csv  braitenberg-2025-08-23-00-50-46.csv  braitenberg-2025-08-23-08-44-01.csv  cmake_install.cmake  cmake_uninstall.cmake  controller  gui_refactoring.md  ogre.cfg  plot_2d_trajectory.py  plot_csv_trajectory.py  plot_position_vs_time.py  plot_trajectory.py  plugins.cfg  py  resources.cfg  scripts  state.md  yars_modernization_summary.txt  yars_working_log.txt
contrib/: CMakeLists.txt  Makefile  cmake_install.cmake
contrib/braitenbergCom/: Braitenberg.cpp  CMakeLists.txt  Makefile  cmake_install.cmake
contrib/braitenbergPipe/: Braitenberg.cpp  CMakeLists.txt  Makefile  cmake_install.cmake
contrib/controller/: Braitenberg2a.cpp  Braitenberg2a.h  Braitenberg2b.cpp  Braitenberg2b.h  Braitenberg3a.cpp  Braitenberg3a.h  Braitenberg3b.cpp  Braitenberg3b.h  CMakeLists.txt  CRBMCtrl.cpp  CRBMCtrl.h  ConstantValue.cpp  ConstantValue.h  GoController.cpp  GoController.h  Hexapod.cpp  Hexapod.h  Julia.cpp  Julia.h  MATLAB.cpp  MATLAB.h  Makefile  NIL.cpp  NIL.h  NMODEController.cpp  NMODEController.h  NamedPipeController.cpp  NamedPipeController.h  Python.cpp  Python.h  PythonController.cpp  PythonController.h  SineController.cpp  SineController.h  SinusController.cpp  SinusController.h  SquareWave.cpp  SquareWave.h  TCPIP.cpp  TCPIP.h  (+13 more)
contrib/cppClientCom/: CMakeLists.txt  Makefile  YarsClientCom.cpp  YarsClientCom.h  cmake_install.cmake
contrib/ctrlGui/: CMakeLists.txt  Makefile  cfg.go  cfg.xml  cmake_install.cmake  main.go  util.go  yars.go  yarsIO.go
contrib/javaBraitenberg/: Braitenberg.java  CMakeLists.txt
contrib/javaClientCom/: Buffer.java  CMakeLists.txt  CommunicationException.java  Domain.java  Entity.java  LowLevelSocketCommunication.java  Motor.java  Sensor.java  YarsClientCom.java  build.xml
contrib/matlab/: braitenberg.m  sample.m  yClose.m  yConnect.m  yGetConfiguration.m  yGetSensors.m  yIntOfData.m  yQuit.m  yReadDoubleVector.m  yReadString.m  yReset.m  ySendDoubleVector.m  ySendMotorCommands.m  ySendString.m  yStart.m  yStrOfInt.m
contrib/namedPipeClientCom/: CMakeLists.txt  Makefile  YarsNamedPipeCom.cpp  YarsNamedPipeCom.h  cmake_install.cmake
contrib/scripts/: blender_import.py  create_blender_scripts.py
contrib/yarsClient/: CMakeLists.txt  CanvasWidget.cpp  CanvasWidget.h  CommunicationModel.cpp  CommunicationModel.h  CommunicationThread.cpp  CommunicationThread.h  ControlWidget.cpp  ControlWidget.h  DataContentPanel.cpp  DataContentPanel.h  DataPanel.cpp  DataPanel.h  InputPanel.cpp  InputPanel.h  MotorPanel.cpp  MotorPanel.h  NumbersPanel.cpp  NumbersPanel.h  SelectionPanel.cpp  SelectionPanel.h  SensorPanel.cpp  SensorPanel.h  StatusBarControl.cpp  StatusBarControl.h  YarsClientControl.cpp  YarsClientControl.h  YarsClientMainWidget.cpp  YarsClientMainWidget.h  YarsControlWidget.cpp  YarsControlWidget.h  yarsClientMain.cpp
doxygen/: CMakeLists.txt  Doxyfile.in
src/yars/: CMakeLists.txt  Makefile  cmake_install.cmake  yarsMain.cpp
src/yars/configuration/: CMakeLists.txt  Makefile  ProgramOptions.cpp  ProgramOptions.h  YarsConfiguration.cpp  YarsConfiguration.h  cmake_install.cmake
src/yars/defines/: defaults.h  keyboard_shortcuts.h  mutex.h  program_options.h  types.h  version.h  ymath.h
src/yars/logging/: BlenderLogger.cpp  BlenderLogger.h  CMakeLists.txt  CSVLogger.cpp  CSVLogger.h  ConsoleLogger.cpp  ConsoleLogger.h  FileLogger.cpp  FileLogger.h  GnuplotLogger.cpp  GnuplotLogger.h  Logger.cpp  Logger.h  LoggingHandler.cpp  LoggingHandler.h  LoggingModule.cpp  LoggingModule.h  LoggingModuleActuator.cpp  LoggingModuleActuator.h  LoggingModuleController.cpp  LoggingModuleController.h  LoggingModuleObject.cpp  LoggingModuleObject.h  LoggingModuleSensor.cpp  LoggingModuleSensor.h  Makefile  SelforgLogger.cpp  SelforgLogger.h  SelforgLogging.cpp  SelforgLogging.h  YarsLoggingControl.cpp  YarsLoggingControl.h  YarsLoggingModel.cpp  YarsLoggingModel.h  cmake_install.cmake
src/yars/main/: CMakeLists.txt  MainLoopThread.cpp  MainLoopThread.h  Makefile  RuntimeControl.cpp  RuntimeControl.h  SignalHandler.cpp  SignalHandler.h  YarsApplication.cpp  YarsApplication.h  YarsMainControl.cpp  YarsMainControl.h  cmake_install.cmake
src/yars/physics/: CMakeLists.txt  Makefile  PhysicsInterface.h  YarsPhysicsControl.cpp  YarsPhysicsControl.h  YarsPhysicsModel.cpp  YarsPhysicsModel.h  cmake_install.cmake
src/yars/rc/: CMakeLists.txt  Makefile  RobotController.hpp  RobotControllerParameter.hpp  cmake_install.cmake
src/yars/types/: Axis.h  CMakeLists.txt  Colour.cpp  Colour.h  Domain.h  GenericContainer.h  Makefile  Matrix.cpp  Matrix.h  NameDimensionDomain.hpp  P2D.h  P3D.cpp  P3D.h  PlyData.cpp  PlyData.h  Pose.cpp  Pose.h  Quaternion.cpp  Quaternion.h  RHDimension.h  ScreenGeometry.cpp  ScreenGeometry.h  TextureDefinition.h  TransformationMatrix.cpp  TransformationMatrix.h  Triangle.cpp  Triangle.h  Vertex.cpp  Vertex.h  WHDDimension.h  cmake_install.cmake
src/yars/util/: CMakeLists.txt  Directories.cpp  Directories.h  FileSystemOperations.cpp  FileSystemOperations.h  Filter.cpp  Filter.h  Makefile  Mapping.cpp  Mapping.h  MappingFunction.cpp  MappingFunction.h  NameFunctions.h  NamedPipe.cpp  NamedPipe.h  OSD.h  Observable.h  ObservableMessage.h  Observer.h  OgreBulletUtils.h  PID.cpp  PID.h  PlyLoader.cpp  PlyLoader.h  Random.cpp  Random.h  Socket.cpp  Socket.h  StringTokeniser.cpp  StringTokeniser.h  Timer.h  VideoCodecs.cpp  macros.h  (+6 more)
tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  test_main.cpp  yars_tests[1]_include.cmake  yars_tests[1]_tests.cmake
tests/regression/: test_braitenberg.cpp
tests/types/: test_p3d.cpp  test_pose.cpp
(+558 files in other folders)
